// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerItem should be able to select item 1`] = `
<Item
  as="a"
  className=""
  onClick={[Function]}
>
  <ItemImage
    src="https://i.ytimg.com/vi/2/hqdefault.jpg"
  />
  <ItemContent>
    <ItemHeader>
      test 2
    </ItemHeader>
    <ItemMeta>
      <Duration
        seconds={60}
      />
      <br />
      <span
        className="ratings-container"
      >
        <Rating
          clearable="auto"
          disabled={true}
          icon="star"
          maxRating={5}
          rating={1}
        />
      </span>
    </ItemMeta>
  </ItemContent>
</Item>
`;

exports[`PickerItem should render 1`] = `
<a
  className="item"
  onClick={[Function]}
>
  <div
    className="image"
  >
    <img
      src="https://i.ytimg.com/vi/1/hqdefault.jpg"
    />
  </div>
  <div
    className="content"
  >
    <div
      className="header"
    >
      test
    </div>
    <div
      className="meta"
    >
      1 minute
       
      
      <br />
      <span
        className="ratings-container"
      >
        <div
          className="ui star disabled rating"
          onMouseLeave={[Function]}
          role="radiogroup"
          tabIndex={0}
        >
          <i
            aria-checked={true}
            aria-posinset={1}
            aria-setsize={5}
            className="active icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={2}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={3}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={4}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={5}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
        </div>
      </span>
    </div>
  </div>
</a>
`;

exports[`PickerItem should render selected 1`] = `
<a
  className="item picker-selected"
  onClick={[Function]}
>
  <div
    className="image"
  >
    <img
      src="https://i.ytimg.com/vi/1/hqdefault.jpg"
    />
  </div>
  <div
    className="content"
  >
    <div
      className="header"
    >
      test
    </div>
    <div
      className="meta"
    >
      1 minute
       
      
      <br />
      <span
        className="ratings-container"
      >
        <div
          className="ui star disabled rating"
          onMouseLeave={[Function]}
          role="radiogroup"
          tabIndex={0}
        >
          <i
            aria-checked={true}
            aria-posinset={1}
            aria-setsize={5}
            className="active icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={2}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={3}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={4}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
          <i
            aria-checked={false}
            aria-posinset={5}
            aria-setsize={5}
            className="icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            onMouseEnter={[Function]}
            role="radio"
            tabIndex={-1}
          />
        </div>
      </span>
    </div>
  </div>
</a>
`;
